--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Prepare Source Code
         run: |
+          lscpu
+          echo $PATH
           env
           docker info
           id -u
