--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,13 @@
 theme:
   name: material
+  features:
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.instant
+    - navigation.instant.progress
+    - navigation.expand
+    - navigation.path
+    - navigation.top
 site_name: DOCS
 site_url: ""
 
