--- a/.github/workflows/linux-x86_64.yaml
+++ b/.github/workflows/linux-x86_64.yaml
@@ -86,7 +86,7 @@ jobs:
           key: ${{ runner.os }}-x86_64-firefox
 
       - name: Download Firefox
-        shell: bash
+        shell: base
         run: |
           set -x
           if [ ! -f ${{ github.workspace }}/var/firefox.tar.bz2 ] ; then
@@ -94,7 +94,7 @@ jobs:
           fi
 
       - name: show browser version
-        shell: bash
+        shell: base
         run: |
           ls -lha var/
           var/chrome-linux/chrome --version
