--- a/.github/workflows/macos-aarch64.yml
+++ b/.github/workflows/macos-aarch64.yml
@@ -73,7 +73,7 @@ jobs:
           key: ${{ runner.os }}-x86_64-firefox
 
       - name: Download Firefox
-        shell: bash
+        shell: base
         run: |
           set -x
           if [ ! -f ${{ github.workspace }}/var/firefox.dmg ] ; then
@@ -81,7 +81,7 @@ jobs:
           fi
 
       - name: show browser version
-        shell: bash
+        shell: base
         run: |
           ls -lha var/
           var/chrome-mac/Chromium.app/Contents/MacOS/Chromium --version
