--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "prettier": "^3.1.0",
     "typescript": "^5.3.2",
     "web-ext": "^7.9.0"
+  },
+  "dependencies": {
+    "npm-check": "^6.0.1",
+    "pnpm": "^10.5.2"
   }
 }
