--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
     "fmt:check": "prettier --check \"extension/**/*.{ts,js}\"",
     "release": "bash release-archive.sh",
     "firefox-test": "bash tools/firefox-web-ext.sh",
-    "chromium-test": "bash tools/chromium.sh"
+    "chromium-test": "bash tools/chromium.sh",
+    "docs-check": "prettier docs --check"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.307",
     "npm-check": "^6.0.1",
     "pnpm": "^10.5.2",
     "prettier": "^3.5.3",
+    "puppeteer-core": "^24.3.0",
     "typescript": "^5.8.2",
     "web-ext": "^8.4.0"
   }
