--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,3 +21,7 @@ nav:
       - base/index.md
   - advance:
       - advance/index.md
+  - tools:
+      - tools/index.md
+  - tutorials:
+      - tutorials/index.md
