添加deepseek 自动测试

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ nav:
   - base:
       - base/index.md
   - advance:
-      - advance/index.md
+      - advanced/index.md
   - tools:
       - tools/index.md
   - tutorials:
